# CPSC-351-OS

./: .clang-tidy  .gitignore  CMakeLists.txt
cmake/: ClangFormat.cmake
fork/: CMakeLists.txt  fork  fork.c  fork_a1  fork_a2  fork_another1.c  fork_another2.c  fork_explained  fork_explained.c
getpid/: CMakeLists.txt  getpid  getpid.cpp
msqueue/: msqueue_receiver.c  reciever  sender
pipe/: double_pipe.cpp  dpipe  pipe  pipe.cpp  popen  popen.cpp
popen/: CMakeLists.txt  popen.cpp  popen_another.cpp
project_1/: CMakeLists.txt  people.txt  skel  skel.cpp
project_2/: CMakeLists.txt  alphanumeric.cpp  fibonacci.cpp
shared_mem/: CMakeLists.txt  reader  writer
src/fork/: fork.c  fork_another1.c  fork_another2.c  fork_explained.c
src/getpid/: getpid.cpp
src/misc/: CMakeLists.txt  prodcons.c
src/mmap/: CMakeLists.txt  mmap.cpp
src/msqueue/: CMakeLists.txt  msqueue_sender.c
src/pipe/: CMakeLists.txt  pipe.cpp
src/popen/: popen_another.cpp
src/project_1/: CMakeLists.txt  skel.cpp
src/project_2/: alphanumeric.cpp
src/project_3/: CMakeLists.txt  file_sys_example.cpp  mmap.cpp  mmap_og.cpp
src/shared_mem/: shared_mem_reader.c  shared_mem_writer.c
src/thread/: CMakeLists.txt  concurrentThreads1.c  concurrentThreads2.c  concurrentThreads3.c  multithreading.c  thread1.c
src/zombie/: CMakeLists.txt
thread/: CMakeLists.txt  concurrentThreads1.c  concurrentThreads2.c  concurrentThreads3.c  mthread  multithreading.c  mutex_example.c  sum  thread  thread1.c  threadTest.c  thread_sum.c
zombie/: zombie  zombie.c
